apps/immich/01-namespace-and-storage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    name: immich
